stream/stream-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stream-1
  template:
    metadata:
      labels:
        app: stream-1
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: task-pv-claim
      containers:
      - name: stream-1
        image: raijenki/mpik8s:stream
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /data
            name: task-pv-storage
        command:
          - /bin/sh
          - -c
          - | 
            OMP_NUM_THREADS=1 ./home/stream_c
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
          limits:
            cpu: "100m"
            memory: "300Mi"
